[tool.poetry]

name = "defipulsedata"
version = "0.0.0-pre"
description = "Unofficial SDK for DeFi Pulse Data"

license = "MIT"

authors = ["James Boyle <pydefipulsedata@protonmail.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/defipulsedata"
documentation = "https://defipulsedata.readthedocs.io"
repository = "https://github.com/jhhb/pydefipulsedata"

keywords = [
    "DeFi",
    "Decentralized Finance",
    "SDK",
    "Client"
]

[tool.poetry.dependencies]

python = "^3.7"

# TODO: Remove these and add your library's requirements
click = "^7.0"
minilog = "^2.0"
responses = "^0.13.3"

[tool.poetry.dev-dependencies]

# Formatters
black = "=20.8b1"
isort = "=5.5.1"

# Linters
mypy = "*"
pydocstyle = "*"
pylint = "~2.6.0"

# Testing
pytest = "^5.3.2"
pytest-cov = "*"
pytest-describe = { git = "https://github.com/pytest-dev/pytest-describe", rev = "453aa9045b265e313f356f1492d8991c02a6aea6" } # use 2.0 when released
pytest-expecter = "^2.1"
pytest-random = "*"
freezegun = "*"

# Reports
coveragespace = "^4.0"

# Documentation
mkdocs = "~1.0"
pygments = "^2.5.2"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
ipython = "^7.12.0"

[tool.poetry.scripts]

defipulsedata = "defipulsedata.cli:main"

[tool.black]

target-version = ["py36", "py37", "py38"]
skip-string-normalization = true

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
